# rtt_viewer

./: .gitignore  app_manager.py  board_handler.py  board_selector.qml  conn_test.py  environment.yml  file_handler.py  jlink_server_menager.py  main.py  main.qml  pylink_test.py  pyproject.toml  requirements.txt  rtt_fileHandler.py  rtt_handler.py  rtt_server.py  rtt_viewer.pyproject  rtt_viewer.pyproject.user.b33dbdb  rtt_viewer.qmlproject  server_manager.py  server_menager.py  serverstarter.py  telnet_shit.py  telnet_test.py  tree.py  tree_test.py  window_menager.py
.qtcreator/Python_3_11_2venv/: pyvenv.cfg
Rtt_viewer/: CMakeLists.txt  Rtt_viewer.qmlproject  Rtt_viewer.qmlproject.qtds
Rtt_viewer/App/autogen/: environment.h
Rtt_viewer/Rtt_viewer/: CMakeLists.txt  Constants.qml  qmldir
Rtt_viewer/Rtt_viewer/designer/: plugin.metainfo
Rtt_viewer/Rtt_viewerContent/: App.qml  CMakeLists.txt  Screen01.ui.qml
testy/: pylink_test.py  rtt_client_pylink.py
