[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtt_viewer"
version = "0.1.0"
description = "RTT Viewer project using PySide"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "PySide6",
    "qt-material"  # Dodaj inne zależności, jeśli są potrzebne
]

[tool.pyside6]
# Opcjonalne ustawienia dla PySide6
qml_dirs = ["."]